--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -12,3 +12,4 @@ quote = "1.0"
 # extra-traits gives use Debug
 syn = {version = "1.0", features = ["extra-traits"]}
 proc-macro2 = "1.0"
+darling = "0.10"
