--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -3,13 +3,21 @@ authors = ["sharks <sharks@sharks>"]
 edition = "2018"
 name = "deku_derive"
 version = "0.1.0"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/sharksforarms/deku"
+description = "bit level serialization/deserialization proc-macro for structs"
+readme = "../README.md"
 
 [lib]
 proc-macro = true
 
 [dependencies]
 quote = "1.0"
-# extra-traits gives use Debug
-syn = {version = "1.0", features = ["extra-traits"]}
+syn = "1.0"
+# extra-traits gives us Debug
+# syn = {version = "1.0", features = ["extra-traits"]}
 proc-macro2 = "1.0"
 darling = "0.10"
+
+[dev-dependencies]
+rstest = "0.6"
