--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -9,7 +9,8 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0"
-# extra-traits gives use Debug
-syn = {version = "1.0", features = ["extra-traits"]}
+syn = "1.0"
+# extra-traits gives us Debug
+# syn = {version = "1.0", features = ["extra-traits"]}
 proc-macro2 = "1.0"
 darling = "0.10"
