--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -14,3 +14,6 @@ syn = "1.0"
 # syn = {version = "1.0", features = ["extra-traits"]}
 proc-macro2 = "1.0"
 darling = "0.10"
+
+[dev-dependencies]
+rstest = "0.6"
