--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ authors = ["sharks <sharks@sharks>"]
 edition = "2018"
 name = "deku"
 version = "0.1.0"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/sharksforarms/deku"
+keywords = ["deku", "bits", "bytes", "nom", "bitvec", "parse", "serialization", "deserialization", "struct"]
+categories = ["parsing"]
+description = "bit level serialization/deserialization proc-macro for structs"
+readme = "README.md"
 
 [workspace]
 members = [
