add required fields

--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -2,7 +2,11 @@
 authors = ["sharks <sharks@sharks>"]
 edition = "2018"
 name = "deku_derive"
-version = "0.1.0"
+version = "0.1.1"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/sharksforarms/deku"
+description = "bit level serialization/deserialization proc-macro for structs"
+readme = "../README.md"
 
 [lib]
 proc-macro = true
