--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ name = "deku"
 version = "0.1.1"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/sharksforarms/deku"
-keywords = ["deku", "bits", "bytes", "nom", "bitvec", "parse", "serialization", "deserialization", "struct"]
+keywords = ["deku", "bits", "serialization", "deserialization", "struct"]
 categories = ["parsing"]
 description = "bit level serialization/deserialization proc-macro for structs"
 readme = "README.md"
