--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["sharks <sharks@sharks>"]
 edition = "2018"
 name = "deku"
-version = "0.1.4"
+version = "0.2.0"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/sharksforarms/deku"
 keywords = ["deku", "bits", "serialization", "deserialization", "struct"]
@@ -16,7 +16,7 @@ members = [
 ]
 
 [dependencies]
-deku_derive = { version = "0.1.0", path = "deku-derive" }
+deku_derive = { version = "^0.2.0", path = "deku-derive" }
 bitvec = "0.17"
 
 
