--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,15 @@ jobs:
           command: clippy
           args: -- -D warnings
 
+  benchmark:
+    name: Benchmark
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+        uses: matchai/criterion-compare-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   coverage:
     name: Coverage
     runs-on: ubuntu-latest
