--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.2.0"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/sharksforarms/deku"
 keywords = ["deku", "bits", "serialization", "deserialization", "struct"]
-categories = ["parsing"]
+categories = ["encoding", "parsing", "no-std"]
 description = "bit level serialization/deserialization proc-macro for structs"
 readme = "README.md"
 
@@ -18,10 +18,14 @@ members = [
     "deku-derive"
 ]
 
+[features]
+default = ["std", "bitvec/std"]
+std = ["alloc"]
+alloc = ["bitvec/alloc"]
+
 [dependencies]
 deku_derive = { version = "^0.2.0", path = "deku-derive" }
-bitvec = "0.17"
-
+bitvec = { version = "0.17", default-features = false }
 
 [dev-dependencies]
 hex-literal = "0.2"
