--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ bitvec = { version = "0.17", default-features = false }
 hex-literal = "0.2"
 rstest = "0.6"
 criterion = "0.3"
+alloc_counter = "0.0.4"
 
 [[bench]]
 name = "deku"
