--- a/release.toml
+++ b/release.toml
@@ -4,5 +4,5 @@ no-dev-version=true
 consolidate-commits=true
 pre-release-commit-message="deku and deku-derive release"
 tag-prefix = "{{crate_name}}"
-tag-message = "{{prefix}}-v{{version}}"
+tag-message = "release {{version}}"
 tag-name = "{{prefix}}-v{{version}}"
