fix: change release toml

--- a/release.toml
+++ b/release.toml
@@ -2,7 +2,7 @@ disable-push=true
 disable-publish=true
 no-dev-version=true
 consolidate-commits=true
-pre-release-commit-message="deku and deku-derive release"
+pre-release-commit-message="release: deku and deku-derive release"
 tag-prefix = "{{crate_name}}"
 tag-message = "release {{version}}"
 tag-name = "{{prefix}}-v{{version}}"
