--- a/ensure_wasm/Cargo.toml
+++ b/ensure_wasm/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook", "wee_alloc"]
 
 [dependencies]
-wasm-bindgen = "=0.2.65"
+wasm-bindgen = "=0.2.68"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -37,3 +37,7 @@ wasm-bindgen-test = "0.3"
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-Oz", "--enable-mutable-globals"]
