feat: Use crate name in proc-macro
- This is better proc-macro hygiene and allows clients to import and
  rename the crate in Cargo.toml (only works on std)
- Re-export bitvec and don't clobber the namespace. This is beneficial
  if bitvec is also used in the same crate deku is used in.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,12 @@ members = [
 ]
 
 [features]
-default = ["std", "bitvec/std"]
-std = ["alloc"]
+default = ["std"]
+std = ["deku_derive/std", "bitvec/std", "alloc"]
 alloc = ["bitvec/alloc"]
 
 [dependencies]
-deku_derive = { version = "^0.10.0", path = "deku-derive" }
+deku_derive = { version = "^0.10.0", path = "deku-derive", default-features = false}
 bitvec = { version = "0.21.0", default-features = false }
 
 [dev-dependencies]
