--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -11,6 +11,9 @@ readme = "../README.md"
 [lib]
 proc-macro = true
 
+[features]
+std = ["proc-macro-crate"]
+
 [dependencies]
 quote = "1.0"
 syn = "1.0"
@@ -18,6 +21,7 @@ syn = "1.0"
 # syn = {version = "1.0", features = ["extra-traits"]}
 proc-macro2 = "1.0"
 darling = "0.11"
+proc-macro-crate = { version = "0.1.4", optional = true }
 
 [dev-dependencies]
 rstest = "0.6"
