--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -13,6 +13,7 @@ proc-macro = true
 
 [features]
 std = ["proc-macro-crate"]
+logging = ["log"]
 
 [dependencies]
 quote = "1.0"
@@ -22,6 +23,7 @@ syn = "1.0"
 proc-macro2 = "1.0"
 darling = "0.14"
 proc-macro-crate = { version = "1.0.0", optional = true }
+log = { version = "0.4.17", optional = true }
 
 [dev-dependencies]
 rstest = "0.13"
