--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,7 +5,7 @@ jobs:
     name: Benchmark
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - uses: actions-rs/toolchain@v1
@@ -13,6 +13,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - uses: jasonwilliams/criterion-compare-action@move_to_actions
+      - uses: boa-dev/criterion-compare-action@v3
         with:
+          branchName: ${{ github.base_ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
