Use acid_io for no_std Read without nightly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ members = [
 
 [features]
 default = ["std", "const_generics"]
-std = ["deku_derive/std", "bitvec/std", "alloc"]
-alloc = ["bitvec/alloc"]
+std = ["deku_derive/std", "bitvec/std", "alloc", "acid_io/std", "acid_io/alloc"]
+alloc = ["bitvec/alloc", "acid_io/alloc"]
 logging = ["deku_derive/logging", "log"]
 const_generics = []
 
@@ -29,6 +29,7 @@ const_generics = []
 deku_derive = { version = "^0.16.0", path = "deku-derive", default-features = false}
 bitvec = { version = "1.0.1", default-features = false }
 log = { version = "0.4.17", optional = true }
+acid_io = { git = "https://github.com/dataphract/acid_io.git", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
 rstest = "0.16.0"
