Switch miri BE test to arm ARM BE8
- I think mips is getting only target 3, so maybe no rust-std? idk

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,8 @@ jobs:
           toolchain: nightly
           override: true
           components: miri
-          target: mips64-unknown-linux-gnuabi64
-      - run: cargo miri test --target mips64-unknown-linux-gnuabi64
+          target: armebv7r-none-eabi
+      - run: cargo miri test --target armebv7r-none-eabi
 
   examples:
     name: Examples
