ci: Disable Miri

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,30 +33,31 @@ jobs:
           command: test
           args: --all
 
-  test_miri:
-    name: Miri Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-          components: miri
-      - run: cargo miri test
-
-  test_miri_big_endian:
-    name: Miri Test Big Endian
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-          components: miri
-          target: armebv7r-none-eabi
-      - run: cargo miri test --target armebv7r-none-eabi
+# TODO: Enable Miri
+#  test_miri:
+#    name: Miri Test
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          toolchain: nightly
+#          override: true
+#          components: miri
+#      - run: cargo miri test
+#
+#  test_miri_big_endian:
+#    name: Miri Test Big Endian
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions-rs/toolchain@v1
+#        with:
+#          toolchain: nightly
+#          override: true
+#          components: miri
+#          target: armebv7r-none-eabi
+#      - run: cargo miri test --target armebv7r-none-eabi
 
   examples:
     name: Examples
