Change ensure_no_std to just build and thumbv7em-none-eabihf

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,8 @@ jobs:
         with:
           toolchain: nightly
           override: true
-      - run: cd ensure_no_std && cargo run --release
+          target: thumbv7em-none-eabihf
+      - run: cd ensure_no_std && cargo build --release --target thumbv7em-none-eabihf
 
   ensure_wasm:
     name: Ensure wasm
