--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ std = ["deku_derive/std", "bitvec/std", "alloc", "acid_io/std", "acid_io/alloc"]
 alloc = ["bitvec/alloc", "acid_io/alloc"]
 logging = ["deku_derive/logging", "log"]
 const_generics = []
-## Enable container.read_cache by default when a `Container` is created
+## Enable reader.read_cache by default when a `Reader` is created
 read_cache = []
 
 [dependencies]
