--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,10 @@ members = [
 ]
 
 [features]
-default = ["std", "const_generics"]
+default = ["std"]
 std = ["deku_derive/std", "bitvec/std", "alloc", "acid_io/std", "acid_io/alloc"]
 alloc = ["bitvec/alloc", "acid_io/alloc"]
 logging = ["deku_derive/logging", "log"]
-const_generics = []
 ## Enable reader.read_cache by default when a `Reader` is created
 read_cache = []
 
