wip: Add bytes_only feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ default = ["std"]
 std = ["deku_derive/std", "bitvec/std", "alloc", "acid_io/std", "acid_io/alloc"]
 alloc = ["bitvec/alloc", "acid_io/alloc"]
 logging = ["deku_derive/logging", "log"]
+bytes_only = []
 
 [dependencies]
 deku_derive = { version = "^0.16.0", path = "deku-derive", default-features = false}
