Switch from acid_io to no_std_io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,15 @@ members = [
 
 [features]
 default = ["std"]
-std = ["deku_derive/std", "bitvec/std", "alloc", "acid_io/std", "acid_io/alloc"]
-alloc = ["bitvec/alloc", "acid_io/alloc"]
+std = ["deku_derive/std", "bitvec/std", "alloc", "no_std_io/std"]
+alloc = ["bitvec/alloc"]
 logging = ["deku_derive/logging", "log"]
 
 [dependencies]
 deku_derive = { version = "^0.16.0", path = "deku-derive", default-features = false}
 bitvec = { version = "1.0.1", default-features = false }
 log = { version = "0.4.17", optional = true }
-acid_io = { git = "https://github.com/dataphract/acid_io.git", default-features = false, features = ["alloc"] }
+no_std_io = { version = "0.5.0", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
 rstest = "0.16.0"
