--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/sharksforarms/deku"
 description = "bit level serialization/deserialization proc-macro for structs"
 readme = "../README.md"
+rust-version = "1.67.1"
 
 [lib]
 proc-macro = true
