--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ deku_derive = { version = "^0.16.0", path = "deku-derive", default-features = fa
 bitvec = { version = "1.0.1", default-features = false }
 log = { version = "0.4.17", optional = true }
 no_std_io = { version = "0.5.0", default-features = false, features = ["alloc"] }
+rustversion = "1.0.15"
 
 [dev-dependencies]
 rstest = "0.18.0"
