Add bits to ensure_no_std features

--- a/ensure_no_std/Cargo.toml
+++ b/ensure_no_std/Cargo.toml
@@ -20,6 +20,6 @@ alloc = []
 
 [dependencies]
 cortex-m-rt = "0.7.3"
-deku = { path = "../", default-features = false, features = ["alloc"] }
+deku = { path = "../", default-features = false, features = ["alloc", "bits"] }
 embedded-alloc = "0.5.1"
 
