Fix problem with clippy:manual_unwrap_or_default
* Fix bugged trigger in darling over new stable clippy lint

See https://github.com/rust-lang/rust-clippy/issues/12643

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,11 @@ assert_hex = "0.4.1"
 [[bench]]
 name = "deku"
 harness = false
+
+[lints]
+workspace = true
+
+[workspace.lints.clippy]
+# Triggers in macro generated code of darling
+# https://github.com/rust-lang/rust-clippy/issues/12643
+manual-unwrap-or-default = "allow"
