--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ error_in_core = []
 deku_derive = { version = "^0.17.0", path = "deku-derive", default-features = false}
 bitvec = { version = "1.0.1", default-features = false }
 log = { version = "0.4.21", optional = true }
-no_std_io = { version = "0.6.0", default-features = false, features = ["alloc"] }
+no_std_io = { version = "0.8.0", default-features = false, features = ["alloc"], package = "no_std_io2" }
 rustversion = "1.0.16"
 
 [dev-dependencies]
