deku_derive: Fix logging error
Eliminate test output mismatch concerns such as:

    ACTUAL OUTPUT:
    ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
    error[E0433]: failed to resolve: use of unresolved module or unlinked crate `log`
     --> tests/test_compile/cases/temp_field.rs:4:10
      |
    4 | #[derive(DekuRead, DekuWrite)]
      |          ^^^^^^^^ use of unresolved module or unlinked crate `log`
      |
      = note: this error originates in the derive macro `DekuRead` (in Nightly builds, run with -Z macro-backtrace for more info)

Signed-off-by: Andrew Jeffery <andrew@codeconstruct.com.au>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ trybuild = "1.0.99"
 rustc-hash = "=2.1.0"
 env_logger = "0.11.5"
 assert_hex = "0.4.1"
+log = { version = "0.4.22" }
 
 [[bench]]
 name = "deku"
