github: Invoke `cargo clippy` with --all-targets
Signed-off-by: Andrew Jeffery <andrew@codeconstruct.com.au>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           toolchain: stable
 
-      - run: cargo clippy -- -D warnings
+      - run: cargo clippy --all-targets -- -D warnings
       - run: cargo fmt --all -- --check
 
   ensure_no_std:
