Expose `alloc` as a selectable feature (#582)
Co-authored-by: Matt Johnston <matt@codeconstruct.com.au>

--- a/deku-derive/Cargo.toml
+++ b/deku-derive/Cargo.toml
@@ -13,9 +13,9 @@ rust-version = "1.81"
 proc-macro = true
 
 [features]
-std = ["proc-macro-crate"]
+std = ["proc-macro-crate", "alloc"]
+alloc = []
 logging = []
-no-assert-string = []
 bits = []
 
 [dependencies]
